# src/app.js
@@ -56,6 +56,7 @@ import authRouter from './routes/auth.routes.js';
 import apiLoggerMiddleware from './middlewares/apiLogger.middleware.js';
 import providerApplicationRouter from './routes/provider-application.routes.js';
 import BookingRouter from './routes/booking.routes.js';
+import AddressRouter from './routes/address.routers.js';
 
 app.use('/api/v1/users', authLimiter, userRouter); // 👈 apply authLimiter to user routes
 app.use('/api/v1/auth', authLimiter, authRouter); // 👈 apply authLimiter to auth routes
@@ -64,6 +65,7 @@ app.use('/api/v1/categories', categoryRouter);
 app.use('/api/v1/services', serviceRoutes);
 app.use('/api/v1/provider-applications', providerApplicationRouter);
 app.use('/api/v1/bookings', BookingRouter);
+app.use('/api/v1/addresses', AddressRouter);
 
 setupSwagger(app);
 
